tests/syntax_error/missing_number_after_e.jou
def foo() -> void:
    x = 123e  # Error: invalid number or variable name "123e"
